Fix search box jumping onto second line

--- a/css/shared/_structure.scss
+++ b/css/shared/_structure.scss
@@ -74,6 +74,7 @@ header.app .search {
 	vertical-align: top;
 	position: absolute;
 	left: 35%;
+	top: 0;
 }
 
 header.app .search .total {
